<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".Activities.SufiMainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/bottom_layout"
            android:background="#000"

            android:splitMotionEvents="false">

            <LinearLayout
                android:gravity="center"
                android:id="@+id/btns_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/strokeline_top"
                android:background="@color/bottom_bar"
                android:orientation="horizontal"
                android:splitMotionEvents="false">

                <LinearLayout
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:id="@+id/btn_about"
                        style="@style/btn_bottom_bar_style"
                        android:src="@drawable/ic_rate_review_black_24dp"
                        android:tag="7" />

                    <TextView
                        android:textColor="@color/white"
                        android:text="Rate Us"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:id="@+id/btn_share"
                        style="@style/btn_bottom_bar_style"
                        android:src="@drawable/btn_share"
                        android:tag="8" />

                    <TextView
                        android:textColor="@color/white"
                        android:text="Share Us"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:id="@+id/btn_more"
                        style="@style/btn_bottom_bar_style"
                        android:src="@drawable/btn_more"
                        android:tag="9" />

                    <TextView
                        android:textColor="@color/white"
                        android:text="More Apps"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/btns_layout"
                android:layout_marginLeft="@dimen/size_thirty"
                android:layout_marginTop="@dimen/size_eight"
                android:layout_marginRight="@dimen/size_thirty"
                android:layout_marginBottom="@dimen/size_eight"
                android:orientation="vertical"
                android:splitMotionEvents="false"
                android:visibility="visible">

                <Button
                    android:id="@+id/btn_kalma1"
                    style="@style/btn_kalma_style"
                    android:drawableRight="@drawable/m_nabvi"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:tag="1"
                    android:text="@string/first_kalma_header"
                    android:textAllCaps="false"
                    android:textColor="@android:color/black"
                    android:textSize="22sp" />

                <Button
                    android:id="@+id/btn_kalma2"
                    style="@style/btn_kalma_style"
                    android:padding="20dp"
                    android:tag="2"
                    android:drawableRight="@drawable/m_nabvi"
                    android:textSize="22sp"
                    android:text="@string/second_kalma_header"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/btn_kalma3"
                    style="@style/btn_kalma_style"
                    android:padding="20dp"
                    android:tag="3"
                    android:drawableRight="@drawable/m_nabvi"
                    android:textSize="22sp"

                    android:text="@string/third_kalma_header"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/btn_kalma4"
                    style="@style/btn_kalma_style"
                    android:padding="20dp"
                    android:tag="4"
                    android:drawableRight="@drawable/m_nabvi"
                    android:textSize="22sp"

                    android:text="@string/fourth_kalma_header"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/btn_kalma5"
                    style="@style/btn_kalma_style"
                    android:padding="20dp"
                    android:tag="5"
                    android:drawableRight="@drawable/m_nabvi"
                    android:textSize="22sp"
                    android:text="@string/fifth_kalma_header"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/btn_kalma6"
                    style="@style/btn_kalma_style"
                    android:padding="20dp"
                    android:tag="6"
                    android:drawableRight="@drawable/m_nabvi"
                    android:textSize="22sp"

                    android:text="@string/sixth_kalma_header"
                    android:textAllCaps="false" />
            </LinearLayout>



            <RelativeLayout
                android:id="@+id/tobbar_layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_fourty_five"
                android:background="@color/black"
                android:splitMotionEvents="false">


                <TextView
                    android:id="@+id/tv_header"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/avenirnext"
                    android:gravity="center"
                    android:text="@string/index_header"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_twenty_two" />
            </RelativeLayout>

            <View
                android:id="@+id/strokeline_top"
                style="@style/stroke_line"
                android:layout_below="@+id/tobbar_layout" />

            <View
                android:id="@+id/strokeline_bottom"
                style="@style/stroke_line"
                android:layout_above="@+id/btns_layout"
                android:alpha="0.3" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/bottom_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:splitMotionEvents="false">


        </RelativeLayout>



    </RelativeLayout>


</ScrollView>